--- a/TorontoFoursquare.ipynb
+++ b/TorontoFoursquare.ipynb
@@ -38413,19 +38413,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "kclusters = 10\n",
     "\n",
     "kmeans = KMeans(n_clusters=kclusters, random_state=4).fit(toronto_grouped_clustering)\n",
     "len(kmeans.labels_)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -38505,6 +38504,93 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "neighborhoods_venues_sorted.insert(0, 'Cluster Labels', kmeans.labels_)\n",
+    "\n",
+    "toronto_merged = toronto\n",
+    "\n",
+    "toronto_merged = toronto_merged.merge(neighborhoods_venues_sorted.set_index('Neighborhood'), on='Neighborhood')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#toronto_merged.dropna(inplace=True)\n",
+    "toronto_merged.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "map_clusters = folium.Map(location=[latitude, longitude], zoom_start=10)\n",
+    "\n",
+    "x = np.arange(kclusters)\n",
+    "ys = [i + x + (i*x)**2 for i in range(kclusters)]\n",
+    "colors_array = cm.rainbow(np.linspace(0, 1, len(ys)))\n",
+    "rainbow = [colors.rgb2hex(i) for i in colors_array]\n",
+    "\n",
+    "# add markers to the map\n",
+    "markers_colors = []\n",
+    "for lat, lon, poi, cluster in zip(toronto_merged['Latitude'], toronto_merged['Longitude'], toronto_merged['Neighborhood'], toronto_merged['Cluster Labels']):\n",
+    "    label = folium.Popup(str(poi) + ' Cluster ' + str(cluster), parse_html=True)\n",
+    "    folium.CircleMarker(\n",
+    "        [lat, lon],\n",
+    "        radius=5,\n",
+    "        popup=label,\n",
+    "        color=rainbow[cluster-1],\n",
+    "        fill=True,\n",
+    "        fill_color=rainbow[cluster-1],\n",
+    "        fill_opacity=0.7).add_to(map_clusters)\n",
+    "\n",
+    "map_clusters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
