--- a/TorontoFoursquare.ipynb
+++ b/TorontoFoursquare.ipynb
@@ -38484,7 +38484,7 @@
     "        fill_color=rainbow[cluster-1],\n",
     "        fill_opacity=0.7).add_to(map_clusters)\n",
     "\n",
-    "map_clusters\n"
+    "map_clusters"
    ],
    "metadata": {
     "collapsed": false,
