Battle of the neighborhoods week 3
Signed-off-by: IntoDs <jtltechno@gmail.com>

--- a/TorontoFoursquare.ipynb
+++ b/TorontoFoursquare.ipynb
@@ -18638,6 +18638,18 @@
     "\n",
     "map_clusters"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "END"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
